--- a/templates/home.html
+++ b/templates/home.html
@@ -3,8 +3,9 @@
 {% block content %}
     {% for post in all_post_list %}
         <div class="post-entry">
-            <h2><a href="{% url "post_detail" post.pk %}">{{ post.title }}</a></h2>
-            <p>{{ post.body }}</p>
+		    <h3><a href="{% url "post_detail" post.pk %}">{{ post.title }}</a></h3>
+		    <p>{{ post.body }}</p>
+            <small>Published on {{ post.published_at | date:"M d, Y" }} by {{ post.author | title}}</small>
         </div>    
     {% endfor %}
 {% endblock content %}
