--- a/templates/base.html
+++ b/templates/base.html
@@ -2,7 +2,7 @@
 
 <html>
     <head>
-        <title>Django blog</title>
+        <title>Django Blog</title>
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700">
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}">
@@ -11,14 +11,30 @@
         <div>
             <header>
                 <div class="nav-left">
-                    <h1><a href="{% url 'home' %}">Django blog</a></h1>
+                    <h1><a href="{% url 'home' %}">Django Blog</a></h1>
                 </div>
                 <div class="nav-right">
                     <a href="{% url 'post_new' %}"> + New Blog Post</a>
                 </div>
             </header>
-            {% block content %}
-            {% endblock content %}
+            <main>
+                <div class="container">
+                    {% if user.is_authenticated %}
+                        <p>Hi {{ user.username }}!</p>
+                        <p><a href="{% url 'logout' %}">Log Out</a></p>
+                    {% else %}
+                        <p>You are not logged in.</p>
+                        <a href="{% url 'login' %}">Log In</a>
+                    {% endif %}
+                    {%block content %}
+                    {%endblock content%}
+                </div>
+            </main>
+            <footer class="footer">
+                <div class="container">
+                <p>© Copyright {% now "Y" %} by <a href="https://www.cetsantos.com.br">CET SANTOS</a></p>
+                </div>
+            </footer>
         </div>
     </body>
 </html>
