--- a/templates/post_edit.html
+++ b/templates/post_edit.html
@@ -1,8 +1,9 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h1>Edit Post</h1>
-    <form action="" method="post">{% csrf_token %}
+    <h3>Edit Post</h3>
+    <form action="" method="post">
+        {% csrf_token %}
         {{ form.as_p }}
         <input type="submit" value="Update">
     </form>
