--- a/templates/signup.html
+++ b/templates/signup.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
 {% block content %}
-    <h2>Log In</h2>
+    <h2>Sign Up</h2>
     <form method="post">
         {% csrf_token %}
         {{ form.as_p }}
-        <input type="submit" value="Log In">
+        <button type="submit">Sign Up</button>
     </form>
 {% endblock content %}
