--- a/templates/base.html
+++ b/templates/base.html
@@ -14,27 +14,25 @@
                     <h1><a href="{% url 'home' %}">Django Blog</a></h1>
                 </div>
                 <div class="nav-right">
-                    <a href="{% url 'post_new' %}"> + New Blog Post</a>
+                    <a href="{% url 'post_new' %}">+ New Blog Post</a>
                 </div>
             </header>
             <main>
                 <div class="container">
                     {% if user.is_authenticated %}
                         <p>Hi {{ user.username }}!</p>
-                        <p><a href="{% url 'logout' %}">Log Out</a></p>
+                        <form action="{% url 'logout' %}" method="post">
+                            {% csrf_token %}
+                            <button type="submit">Log Out</button>
+                        </form>
                     {% else %}
                         <p>You are not logged in.</p>
-                        <a href="{% url 'login' %}">Log In</a>
+                        <a href="{% url 'login' %}">Log In</a> | <a href="{% url 'signup' %}">Sign Up</a>
                     {% endif %}
                     {%block content %}
                     {%endblock content%}
                 </div>
             </main>
-            <footer class="footer">
-                <div class="container">
-                <p>© Copyright {% now "Y" %} by <a href="https://www.cetsantos.com.br">CET SANTOS</a></p>
-                </div>
-            </footer>
         </div>
     </body>
 </html>
