--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,21 @@
 {% extends "base.html" %}
 
 {% block content %}
+
     {% for post in all_post_list %}
-        <div class="post-entry">
-		    <h3><a href="{% url "post_detail" post.pk %}">{{ post.title }}</a></h3>
-		    <p>{{ post.body }}</p>
-            <small>Published on {{ post.published_at | date:"M d, Y" }} by {{ post.author | title}}</small>
-        </div>    
+        <div class="col-lg-4 my-4">
+            <div class="card shadow" style="width: 20rem; height: 33rem;">
+                <img src="/media/{{post.image}}" class="card-img-top" alt="..." height="250px">
+                <div class="card-body">
+                <h5 class="card-title">{{post.title}} <br><small>by {{post.author}}</small></h5>
+                <p class="card-text">{{post.body| truncatechars:210}}</p>
+                <a href="{% url "post_detail" post.pk %}" class="btn btn-primary">Read Post</a> | 
+                {% if user.is_superuser %}
+                <a href="{% url "post_delete" post.pk %}" class="btn btn-danger mx-4">Delete Post</a>
+                {% endif %}</a>
+                </div>
+            </div>
+        </div>
     {% endfor %}
+
 {% endblock content %}
