--- a/templates/base.html
+++ b/templates/base.html
@@ -1,11 +1,15 @@
 {% load static %}
-
-<html>
+<!DOCTYPE html>
+<html lang="en">
     <head>
-        <title>Django Blog</title>
-        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,400i,700">
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!--
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
+        -->
         <link rel="stylesheet" href="{% static 'css/base.css' %}">
         <link rel="shortcut icon" type="image/png" href="{% static 'img/favicon.png' %}">
+        <title>Django Blog</title>
     </head>
     <body>
         <div>
@@ -17,9 +21,7 @@
                     <a href="{% url 'post_new' %}">+ New Post</a>
                 </div>
             </header>
-
-            {% include 'navbar.html' %}
-
+            <!-- {% include 'navbar CSS.html' %} -->
             <main>
                 <div class="container">
                     {% if user.is_authenticated %}
